# ml-sad

./: .gitignore  ACKNOWLEDGEMENTS  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
docs/: CNAME  Makefile
sad/callback/: __init__.py  base.py  caller.py  metrics_logging.py  w_l1_scheduler.py
sad/generator/: __init__.py  base.py  implicit_fb.py  simulation.py
sad/model/: __init__.py  base.py  bpr.py  cornac.py  fm.py  msft_ncf.py  msft_rbm.py  msft_vae.py  sad.py  svd.py
sad/task/: base.py  dummy.py
sad/task/training/: config.yml  training.py
sad/trainer/: __init__.py  base.py  cornac.py  fm.py  msft_ncf.py  msft_rbm.py  msft_vae.py  sad.py  svd.py
sad/utils/: job.py  logging.py  misc.py
