[metadata]
name = ml-sad
description = SAD - a Python package for Collaborative Filtering.
keywords = recommendation, ml
license = Apple Sample Code License
author = Shiwen Zhao
author_email = shiwen_zhao@apple.com
maintainer = Shiwen Zhao
maintainer_email = shiwen_zhao@apple.com

[options]
packages = find:
package_dir = =.
python_requires = ==3.7.*

[options.packages.find]
include = sad.*

[options.data_files]
data =
    VERSION
    requirements-env.txt
